--- a/styles.css
+++ b/styles.css
@@ -95,6 +95,17 @@ h3 {
 
 
 
+.photo_gallery{
+
+}
+
+.box {
+  height: 400px;
+  padding: 0;
+  display: flex;
+  flex-grow: 1;
+}
+
 .photo_gallery .box-1{
 
 flex: 2 1;
@@ -116,22 +127,23 @@ flex: 1 1;
 
 .box-4{
 
-
+flex-grow: 1;
 
 }
 .box-5{
-
+flex-grow: 1;
 
 }
 
 .box-6{
+flex-grow: 2;
 
 
 
 }
 
 .box-7{
-
+flex-grow: 1;
 
 }
 
